torrents/qbittorrent/qbittorrent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  # qbittorrent has a lockfile
  # this prevents running several replicas
  # this also prevents RollingUpdate
  # Second instance will exit right after starting,
  # when it fails to lock the file.
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app-type: torrent
        app: qbittorrent
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
      containers:
      - name: qbittorrent
        image: docker.io/qbittorrentofficial/qbittorrent-nox:4.5.5-1
        ports:
        - name: web-ui
          containerPort: 8080
        - name: data-tcp
          containerPort: 6881
          protocol: TCP
        - name: data-udp
          containerPort: 6881
          protocol: UDP
        securityContext:
          readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: 1m
            memory: 50Mi
          limits:
            cpu: 4000m
            memory: 1000Mi
        volumeMounts:
        - name: entrypoint
          mountPath: /entrypoint.sh
          subPath: entrypoint.sh
        - name: entrypoint
          mountPath: /added-hook-script.sh
          subPath: set-tag.sh
        - name: default-config
          mountPath: /mnt/default-config
        - name: config
          mountPath: /config
        - name: watch
          mountPath: /mnt/watch
        - name: finished
          mountPath: /mnt/finished
        - name: incomplete
          mountPath: /mnt/incomplete
        startupProbe:
          httpGet:
            path: /api/v2/app/version
            port: web-ui
            scheme: HTTP
          periodSeconds: 1
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 20
        livenessProbe:
          httpGet:
            path: /api/v2/app/version
            port: web-ui
            scheme: HTTP
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 2
      volumes:
      - name: entrypoint
        configMap:
          name: entrypoint
          defaultMode: 0555
      - name: default-config
        configMap:
          name: default-config
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: watch
        persistentVolumeClaim:
          claimName: watch
          readOnly: true
      - name: finished
        persistentVolumeClaim:
          claimName: torrent
      - name: incomplete
        persistentVolumeClaim:
          claimName: incomplete
