torrents/qbittorrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: REPLACE_ME
spec:
  ingressClassName: nginx
  tls:
  - secretName: REPLACE_ME
  rules:
  - host: qbittorrent.REPLACE_ME.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-ui
            port:
              name: http
